Metlife pdf, udpates

--- a/src/home-insurance/17-heater-details.html
+++ b/src/home-insurance/17-heater-details.html
@@ -199,13 +199,76 @@
                             <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">Is Oil Tank Above or Below the Ground </h3>
+                        <h3 class="title  text-center">Oil Tank Details</h3>
 
                         <div class="contain-wrapper-sm">
-                            <form class="mt-4 d-flex justify-content-center">
-                                <button type="submit" class="btn btn-outline text-blue  mx-2 mt-4"><span>Above</span>
-                                </button>
-                                <button type="submit" class="btn btn-primary  mx-2 mt-4"><span>Below</span>
+                            <form class="mt-4 ">
+                                <div class="d-flex justify-content-center">
+                                    <div class="blue-light-box bg-white w-75">
+
+                                        <div class="row g-3">
+                                            <div class="col-md-12 ">
+                                                <h5 class="fs-16">Is Oil Tank Above or Below the Ground</h5>
+                                                <div class="d-flex align-items-center justify-content-start">
+                                                    <div class="d-flex align-self-center me-3">
+                                                        <label class="radio-inline radio-btn" for="livingYes">
+                                                            <input class="radio-control" type="radio" name="living"
+                                                                value="" id="livingYes" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label fs-14">Above
+                                                            </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="d-flex align-self-center me-3">
+                                                        <label class="radio-inline radio-btn" for="livingNo">
+                                                            <input class="radio-control" type="radio" name="living"
+                                                                value="" id="livingNo">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label fs-14">Below
+                                                            </span>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-12 ">
+                                                <h5 class="fs-16">Oil tank is in Interior or Exterior</h5>
+                                                <div class="d-flex align-items-center justify-content-start">
+                                                    <div class="d-flex align-self-center me-3">
+                                                        <label class="radio-inline radio-btn" for="livingYes">
+                                                            <input class="radio-control" type="radio" name="living"
+                                                                value="" id="livingYes" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label fs-14">interior
+                                                            </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="d-flex align-self-center me-3">
+                                                        <label class="radio-inline radio-btn" for="livingNo">
+                                                            <input class="radio-control" type="radio" name="living"
+                                                                value="" id="livingNo">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label fs-14">exterior
+                                                            </span>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-12 mb-0">
+                                                <label class="checkbox-inline mb-0 w-auto"
+                                                    for="flexCheckDefault2">
+                                                    <input class="checkbox-control" type="checkbox" value=""
+                                                        id="flexCheckDefault2">
+                                                    <span class="checkbox-custom"></span>
+                                                    <span class="checkbox-label fs-14">On a cement floor
+                                                    </span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
                                 </button>
                             </form>
                         </div>
