--- a/src/home-insurance/17.1-heater-details.html
+++ b/src/home-insurance/17.1-heater-details.html
@@ -199,24 +199,31 @@
                             <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">Distance of Stove From Wall</h3>
+                        <h3 class="title  text-center">Stove Details</h3>
 
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
-                                <div class="">
-                                    <div class="d-flex justify-content-between">
-                                    </div>
-                                    <div class="vehicle-details">
-                                        <div class="d-flex justify-content-center">
-                                            <div class="form-group">
-                                                <div class="input-group form-control px-0">
-                                                    <input type="number" class="" id="Distance" placeholder="Distance" />
-                                                    <span class="input-group-append ">
-                                                        <span class="input-group-text border-0 bg-white d-block pe-2">
-                                                            Inches
+
+                                <div class="d-flex justify-content-center">
+                                    <div class="blue-light-box bg-white w-75">
+                                        <div class="row g-3">
+                                            <div class="col-md-12 ">
+                                                <div class="form-group">
+                                                    <div class="input-group form-control px-0">
+                                                        <input type="number" class="" id="Distance"
+                                                            placeholder="Distance of Stove From Wall" />
+                                                        <span class="input-group-append ">
+                                                            <span
+                                                                class="input-group-text border-0 bg-white d-block pe-2">
+                                                                Inches
+                                                            </span>
                                                         </span>
-                                                    </span>
+                                                    </div>
                                                 </div>
+                                            </div>
+
+                                            <div class="col-md-12 ">
+                                                <input type="text" placeholder="Number of Stoves" class="form-control" />
                                             </div>
                                         </div>
                                     </div>
