--- a/src/home-insurance/17.3-heater-details.html
+++ b/src/home-insurance/17.3-heater-details.html
@@ -203,7 +203,7 @@
 
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
-                                <div class="blue-light-box bg-white">
+                                <div class="blue-light-box bg-white w-75 mx-auto">
                                     <div class="vehicle-details">
                                         <div class="row gap-3">
                                             <div class="col-12">
