--- a/src/home-insurance/7-property-payment-info.html
+++ b/src/home-insurance/7-property-payment-info.html
@@ -229,24 +229,16 @@
 
 
                                             <div class="col-12">
-                                                <div class="accordion custom" id="accordionPolicy">
+                                                <div class="accordion custom" id="company-details">
                                                     <div class="accordion-item rounded-1">
-                                                        <h2 class="accordion-header" id="headingTwo">
-                                                            <button class="accordion-button" type="button"
-                                                                data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-                                                                aria-expanded="true" aria-controls="collapseTwo">
-                                                                <h4 class="title fs-18">Payment 1</h4>
-                                                            </button>
-                                                        </h2>
                                                         <div id="collapseTwo" class="accordion-collapse collapse show"
                                                             aria-labelledby="headingTwo"
-                                                            data-bs-parent="#accordionPolicy">
-                                                            <div class="accordion-body pt-0">
+                                                            data-bs-parent="#company-details">
+                                                            <div class="accordion-body">
                                                                 <div class="row g-3">
                                                                     <div class="col-12">
                                                                         <div class="form-group">
-                                                                            <input type="text"
-                                                                                placeholder="Enter company name"
+                                                                            <input type="text" placeholder="Enter Name"
                                                                                 class="form-control">
                                                                         </div>
                                                                     </div>
@@ -297,8 +289,30 @@
                                                                                 class="form-control">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="border-dashed-1"></div>
-                                                                    <div class="col-6 ">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div><!-- /accordion-item -->
+
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="accordion custom" id="accordionPolicy">
+                                                    <div class="accordion-item rounded-1">
+                                                        <h2 class="accordion-header" id="headingTwo">
+                                                            <button class="accordion-button" type="button"
+                                                                data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                                                aria-expanded="true" aria-controls="collapseTwo">
+                                                                <h4 class="title fs-18">Payment 1</h4>
+                                                            </button>
+                                                        </h2>
+                                                        <div id="collapseTwo" class="accordion-collapse collapse show"
+                                                            aria-labelledby="headingTwo"
+                                                            data-bs-parent="#accordionPolicy">
+                                                            <div class="accordion-body pt-0">
+                                                                <div class="row g-3">
+                                                                    
+                                                                    <div class="col-6 position-relative z-index-2">
                                                                         <div class="f-group max-width-100">
                                                                             <div class="f-dropdown selectDropdown">
                                                                                 <select class="f-control f-dropdown"
@@ -311,7 +325,7 @@
                                                                                     <option value="2">Additional
                                                                                         insurance
                                                                                     </option>
-                                                                                    <option value="3" selected>Mortgagee
+                                                                                    <option value="3">Mortgagee
                                                                                     </option>
                                                                                 </select>
                                                                             </div>
@@ -324,7 +338,7 @@
                                                                                 class="form-control">
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-12">
+                                                                    <div class="col-12 position-relative z-index-1">
                                                                         <div class="f-group max-width-100">
                                                                             <div class="f-dropdown selectDropdown">
                                                                                 <select class="f-control f-dropdown"
